@@ -2,6 +2,7 @@ Pending changes in the mainline
 ===============================
 
 * Add ".dcm" suffix to files in ZIP archives (cf. URI ".../archive")
+* "/tools/create-dicom": Support of binary tags encoded using data URI scheme
 
 Maintenance
 -----------
